added new api calls for grabbing info
