# backend/static/swagger.yaml
@@ -34,6 +34,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  '/v0/retrieveInfo/':
+    parameters:
+      - name: id
+        in: query
+        description: Stock Ticker
+        required: true
+        schema:
+          type: string
+          format: string
+    get:
+      description: Returns the email identified by the id
+      responses:
+        '200':
+          description: Email found
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/Stock'
+        '404':
+          description: Stock ticker not found
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   '/v0/getDescription':
     parameters:
       - name: id
@@ -60,7 +88,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-            
+  '/v0/getInfo':
+    post:
+      description: Get Information
+      requestBody:
+        description: Request Body
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StockTicker'
+      responses:
+        '201':
+          description: response
+          content:
+            application/json:
+              schema:
+                type: string
   '/v0/login':
     post:
       description: Login
@@ -104,7 +148,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Ticker'
+              $ref: '#/components/schemas/StockTicker'
       responses:
         '201':
           description: added to database
@@ -142,6 +186,38 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Ticker'
+            examples:
+              Day:
+                value:
+                  ticker: TSLA
+                  year: 2022
+                  month: 1
+                  day: 1
+                  year2: 2022
+                  month2: 2
+                  day2: 1
+                  interval: 1d
+              Week:
+                value:
+                  ticker: TSLA
+                  year: 2022
+                  month: 1
+                  day: 1
+                  year2: 2022
+                  month2: 2
+                  day2: 1
+                  interval: 1wk
+              Month:
+                value:
+                  ticker: TSLA
+                  year: 2022
+                  month: 1
+                  day: 1
+                  year2: 2022
+                  month2: 2
+                  day2: 1
+                  interval: 1mo
+                
       responses:
         '201':
           description: Historical Data found
@@ -229,3 +305,8 @@ components:
           type: string
         data:
           type: object
+    StockTicker:
+      type: object
+      properties:
+        ticker:
+          type: string
